--- a/1.application/1.1-application.md
+++ b/1.application/1.1-application.md
@@ -17,7 +17,7 @@ layout:
 
 ## 1.1.1 어플리케이션 생성
 
-1. 메뉴 영역에서 `어플리케이션` > `어플리케이션`을 클릭합니다.
+1. 메뉴 영역에서 `어플리케이션` > `어플리케이션`을 클릭합니다. 테스트 중
 2. 어플리케이션 페이지가 열리면 `생성`을 클릭합니다.&#x20;
 
 \[그림 1.1.1] 어플리케이션 생성 페이지
